--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li class="active"><a href="#header">Home</a></li>
-          <li><a href="domain.html">Domain</a></li>
+          <li><a href="Domain.html">Domain</a></li>
           <li><a href="Milestones.html">Milestones</a></li>
           <li ><a href="Documentation.html">Documentation</a></li>
           <li><a href="#portfolio">Team</a></li>
