--- a/Domain.html
+++ b/Domain.html
@@ -51,10 +51,10 @@
 <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li class="active"><a href="#about">Domain</a></li>
-          <li > <a href="#services">Milestones</a></li>
-          <li class="#services1"><a href="">Documentation</a>
-          <li><a href="#portfolio">Team</a></li>
+          <li class="active"><a href="domain.html">Domain</a></li>
+          <li > <a href="Milestones.html">Milestones</a></li>
+          <li class="Documentation.html"><a href="">Documentation</a>
+          <li><a href="index.html">Team</a></li>
           
           </li>
           <li><a href="#contact">Contact</a></li>
