--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li class="active"><a href="#header">Home</a></li>
-          <li><a href="domain.html">Domain</a></li>
-          <li><a href="#services">Milestones</a></li>
-          <li class="#services1"><a href="">Documentation</a>
+          <li><a href="Domain.html">Domain</a></li>
+          <li><a href="Milestones.html">Milestones</a></li>
+          <li class="#services1"><a href="Documentation.html">Documentation</a>
           <li><a href="#portfolio">Team</a></li>
           
           </li>
