--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <li><a href="Domain.html">Domain</a></li>
           <li><a href="Milestones.html">Milestones</a></li>
           <li class="#services1"><a href="Documentation.html">Documentation</a>
-          <li><a href="#portfolio">Team</a></li>
+          <li><a href="#team">Team</a></li>
           
           </li>
           <li><a href="#contact">Contact</a></li>
